syntax = "proto3";
package proto.user.v1;
option go_package = "github.com/4x2Hach1/learning/grpc-go/api/gen/proto/user/v1;userv1";

message User{
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message UserRequest {
    int32 id = 1;
};
message UserResponse {
    User user = 1;
}

service UserService {
    rpc User(UserRequest) returns(UserResponse);
}
